Fix spacing for all browsers

--- a/css/core/_oms-list-body.scss
+++ b/css/core/_oms-list-body.scss
@@ -12,8 +12,8 @@
 .oms-list-body {
     overflow-y: scroll;
     height: $oms-list-body-height;
-    //display: -ms-flexbox;
-    //display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    padding-right: 20px;
+    overflow-x: hidden;
 }
