--- a/css/openMultiSelect.css
+++ b/css/openMultiSelect.css
@@ -399,6 +399,8 @@
   height: 100%;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  padding-right: 20px;
+  overflow-x: hidden;
 }
 
 /*
